# carfac

./: .gitignore  CARFAC_Init.m  CARFAC_SYN_Step.m  CARFAC_Test.m  CONTRIBUTORS  README.md  common_shared_3p_blueprint_information.ncl
carfac/: AUTHORS  CONTRIBUTORS  README  SConstruct  agc.h  agc_coeffs.cc  agc_coeffs.h  agc_params.cc  agc_params.h  agc_state.cc  agc_state.h  car.h  car_coeffs.cc  car_coeffs.h  car_params.cc  car_params.h  car_state.cc  car_state.h  carfac.cc  carfac.h  carfac_common.cc  carfac_common.h  carfac_output.cc  carfac_output.h  carfac_test.cc  carfac_test.h  carfac_util.cc  carfac_util.h  common.h  ear.cc  ear.h  ear_output.cc  ear_output.h  ihc.h  ihc_coeffs.cc  ihc_coeffs.h  ihc_params.cc  ihc_params.h  ihc_state.cc  ihc_state.h  (+5 more)
cpp/: CMakeLists.txt  SConstruct  agc.h  animated_sai.cc  binaural_sai.cc  binaural_sai.h  binaural_sai_test.cc  car.cc  car.h  carfac.cc  carfac.h  carfac.html  carfac.js  carfac_output.cc  carfac_output.h  carfac_test.cc  carfac_util.h  color.cc  color.h  color_test.cc  common.h  ear.cc  ear.h  emscripten_bindings.cc  ihc.h  image.cc  image.h  image_test.cc  pitchogram.cc  pitchogram.h  pitchogram.html  pitchogram_pipeline.cc  pitchogram_pipeline.h  pitchogram_pipeline_test.cc  pitchogram_test.cc  pitchogram_web_bindings.cc  realtime_sai.cc  sai.cc  sai.h  sai_output_220Hz.csv  (+5 more)
cpp/SDL2/i686-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
cpp/SDL2/i686-w64-mingw32/lib/pkgconfig/: sdl2.pc
cpp/SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_revision.h
cpp/SDL2/x86_64-w64-mingw32/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
cpp/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config-version.cmake
cpp/SDL2/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
cpp/SFML-2.3.2/doc/: sfml.chm
matlab/: AGC_params_default.m  AIMCread.m  CARFAC_AGC_Step.m  CARFAC_CAR_Step.m  CARFAC_Close_AGC_Loop.m  CARFAC_Compare_CPP_Test_Data.m  CARFAC_Cross_Couple.m  CARFAC_Design.m  CARFAC_Design_Stage_g.m  CARFAC_Detect.m  CARFAC_GenerateTestData.m  CARFAC_IHC_Step.m  CARFAC_Init.m  CARFAC_OHC_NLF.m  CARFAC_Rational_Functions.m  CARFAC_Run.m  CARFAC_Run_Linear.m  CARFAC_Run_Open_Loop.m  CARFAC_Run_Segment.m  CARFAC_SAI.m  CARFAC_SAI_hacking.m  CARFAC_SYN_Step.m  CARFAC_Spatial_Smooth.m  CARFAC_Stage_g.m  CARFAC_Test.m  CARFAC_Transfer_Functions.m  CARFAC_binaural.m  CARFAC_hacking.m  CAR_Design.m  CAR_params_default.m  ERB_Hz.m  IHC_params_default.m  MakeMovieFromPngsAndWav.m  MultiScaleSmooth.m  RELEASE_NOTES.md  SAI_BlendFrameIntoComposite.m  SAI_DesignLayers.m  SAI_Run.m  SAI_RunLayered.m  SAI_Run_Segment.m  (+5 more)
pitchogram_demo/: index.html  pitchogram_web_bindings.js  pitchogram_web_bindings.wasm
python/: README.md  pyproject.toml  sai.py  sai_test.py  testing.py
python/jax/: README.md  carfac.py  carfac_bench.py  carfac_float64_test.py  carfac_test.py  carfac_util.py  carfac_util_test.py  utils.py  utils_test.py
python/np/: carfac.py  carfac_test.py
python/src/carfac/: better_whisper_sai.py  demo.py  map.py  requirements.txt  run_sai.py  sai.py  sai_test.py  test.py  testing.py  transcribe_demo.py  whisper_pitchogram.py  whisper_sai.py  whisper_sai_test.py  yuka_final.py
python/src/carfac/jax/: README.md  carfac.py  carfac_bench.py  carfac_float64_test.py  carfac_test.py  carfac_util.py  carfac_util_test.py  utils.py  utils_test.py
python/src/carfac/np/: README.md  carfac.py  carfac_test.py
python/src/carfac/shit files/: ok_sai.py  shit_sai.py  whisper_sai_test.py  yuka_final.py
python/src/carfac/test_data/: agc_test-matlab-bm1.txt  binaural_test-cpp-nap1.txt  binaural_test-cpp-nap2.txt  binaural_test-cpp-sai1.txt  binaural_test-matlab-sai1.txt  binaural_test-py-sai1.txt  ihc_just_hwr_test-audio.txt  ihc_just_hwr_test-cpp-nap2.txt  ihc_just_hwr_test-matlab-bm2.txt  ihc_just_hwr_test-matlab-nap2.txt  ihc_just_hwr_test-matlab-sai1.txt  long_test-cpp-nap1.txt  long_test-matlab-sai1.txt  pitchogram_pipeline_test-dark_theme.pnm
python/src/carfac/tf/: __init__.py  carfac.py  carfac_can_disable_agc_test.py  carfac_golden_data_test.py  carfac_gradient_test.py  carfac_performance_test.py  carfac_saveload_test.py  carfac_test.py  golden_data.npz  pz.py  pz_saveload_test.py  pz_test.py  visualizations.ipynb
python/tf/: README.md  car.py  car_saveload_test.py  car_test.py  carfac.py  carfac_can_disable_agc_test.py  carfac_golden_data_test.py  carfac_gradient_test.py  carfac_performance_test.py  carfac_saveload_test.py  carfac_test.py  pz.py  pz_saveload_test.py  pz_test.py  visualizations.ipynb
test_data/: agc_test-cpp-nap1.txt  agc_test-cpp-nap2.txt  agc_test-matlab-bm2.txt  agc_test-matlab-nap1.txt  agc_test-matlab-nap2.txt  agc_test-matlab-sai1.txt  binaural_test-cpp-nap1.txt  binaural_test-cpp-nap2.txt  binaural_test-cpp-sai1.txt  binaural_test-matlab-bm2.txt  binaural_test-matlab-nap1.txt  binaural_test-matlab-sai1.txt  ihc_just_hwr_test-cpp-nap1.txt  ihc_just_hwr_test-matlab-bm1.txt  ihc_just_hwr_test-matlab-nap1.txt  long_test-cpp-nap1.txt  long_test-cpp-nap2.txt  (+2 more)
tf/: car.py  (+5 more)
(+122 files in other folders)
