[project]
name = "carfac"
version = "0.0.1"
description = "Python implementation of Cascade of Asymmetric Resonators with Fast-Acting Compression (CARFAC)"
readme = "../README.md"
# The lower bound of these versions come from Colab as of 2025-06-20.
requires-python = ">=3.11"
dependencies = [
    "matplotlib >=3.9.1",
    "numpy >=2.0.2",
]

[project.optional-dependencies]
tf = [
    "tensorflow >=2.18.0",
    "tf-keras >=2.18.0",
]
jax = [
    "jax >=0.5.1",
]

[dependency-groups]
dev = [
    "absl-py >=1.4.0",
    "google-benchmark >=1.9.4",
    "parameterized >=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tests and test data are included in distributions, but that is okay as we are
# only distributing this package as a Git repository (which will include
# everything when cloned anyway).
force-include = {"../test_data" = "carfac/test_data"}
packages = ["src/carfac"]
